change link in nav bar

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -117,7 +117,7 @@ SOFTWARE.
               </a>
             </li>
             <li class="nav-text"><a href="{% url 'contest:archive' %}">Contest</a></li>
-            <li class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
+            <li class="nav-text"><a href="{% url 'problem:problem' %}">Problem</a></li>
             <li class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
             <li class="nav-text"><a href="{% url 'status:status' %}">Status</a></li>
             <li class="nav-text"><a href="{% url 'group:list' %}">Group</a></li>
