--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -40,7 +40,7 @@ SOFTWARE.
         <a>Rank</a> &nbsp;|&nbsp;
         <a data-toggle='modal' data-target='#myModal'>Limits</a>
       </h5>
-      <button class="btn btn-primary btn-lg" style='float:right'>Submit</button>
+      <a class="btn btn-primary btn-lg" style='float:right' href="{% url 'users:submit' problem.pk %}">Submit</a>
     </div>
   </div>
 </div>
