--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -114,7 +114,9 @@ SOFTWARE.
         <li class="active" role="presentation"><a href="#overview" role="tab" data-toggle="tab">Overview</a>
         </li>
         <li class="dropdown" role="presentation">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Problem</a>
+          <a href="#problem" class="dropdown-toggle" data-toggle="dropdown">
+            Problem<span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" role="menu">
             {% for problem in contest.problem.all %}
             <li role="presentation">
