fix problem css

--- a/problem/static/problem/css/problem.css
+++ b/problem/static/problem/css/problem.css
@@ -27,7 +27,30 @@ SOFTWARE.
   min-height: 500px;
 }
 
+.pname_block {
+  position: relative;
+  min-height: 100px;
+  margin-bottom: 50px;
+  width: 100%;
+  display: flex;
+}
+
+.pname {
+  word-wrap: break-word; 
+  word-break: normal;
+}
+
+.pname_block .left {
+  padding-left: 10px;
+  flex: 1;
+}
+
+.pname_block .right {
+  padding: 10px;
+}
+
 .problem-option a {
   text-decoration: none;
   cursor: pointer;
 }
+
