--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -110,7 +110,7 @@ SOFTWARE.
     <nav class="navbar navbar-inverse newbar" >
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -118,7 +118,7 @@ SOFTWARE.
           </button>
           <a class="navbar-brand" href="{% url 'index:index' %}">NTHU Online Judge</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="nav-text"><a href="{% url 'contest:archive' %}">Contest</a></li>
             <li class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
