--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -160,6 +160,7 @@ textarea#inputSmall {
   padding-bottom: 5px;
   margin: 0px;
   height: 40px;
+  width: 40px;
 }
 #notification_img{
   cursor: pointer;
@@ -293,41 +294,42 @@ textarea#inputSmall {
 }
 .navbar-brand {
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
+  height: auto;
 }
 @media (max-width: 1300px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left,.navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
     top: 0;
     border-width: 0 0 1px;
   }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
     margin-top: 7.5px;
   }
   .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-      display:block !important;
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in{
+    display:block !important;
   }
 }
