--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -33,6 +33,7 @@ SOFTWARE.
 <script src={% static "js/index.js"%}></script>
 {% endblock import_source %}
 {% block body_block %}
+{% load contest_extras %}
   <!-- clock -->
   <input type="text" id="alert_info" value="{{alert_info}}" />
   <!-- logo -->
@@ -95,8 +96,9 @@ SOFTWARE.
       <thead class="line">
         <tr>
           <th>Contest name</th>
-          <th>remaining time</th>
-          <th>upcoming</th>
+          <th>Remaining time</th>
+          <th style="text-align: center">Upcoming</th>
+          <th style="width: 5%"></th>
         </tr>
       </thead>
       <tbody id="contest_content">
@@ -106,6 +108,7 @@ SOFTWARE.
               <a href="{% url 'contest:contest' c_running.id %}">{{ c_running.cname }}</a>
             </td>
             <td name="remain"></td>
+            <td></td>
             <td></td>
             <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
             <td name="contest_id" class="end">{{ c_running.id }}</td>
@@ -118,7 +121,16 @@ SOFTWARE.
               <a href="{% url 'contest:contest' c_upcoming.id %}">{{ c_upcoming.cname }}</a>
             </td>
             <td></td>
-            <td  name="upcome"></td>
+            <td  name="upcome" style="text-align: center"></td>
+            <td style="width: 5%">
+              {% if user|can_register:c_upcoming %}
+              <a href="{% url 'contest:register' c_upcoming.id %}">
+                <button type="button" class="btn btn-warning btn-xs" title="register contest">
+                  <span class="glyphicon glyphicon-plus"></span>
+                </button>
+              </a>
+              {% endif %}
+            </td>
             <td  name="start" class="start">{{ c_upcoming.start_time|date:"Y/m/d H:i:s" }}</td>
           </tr>
         {% endfor %}
