--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -21,8 +21,8 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.-->
 
-{% extends "index/base.html" %} 
-{% load static %} 
+{% extends "index/base.html" %}
+{% load static %}
 {% block body_block %}
 
 <div class="container-fluid">
@@ -32,7 +32,7 @@ SOFTWARE.-->
       <!-- Create/Delete group need judge auth -->
       {% if user.has_judge_auth %}
       <div class="form-group">
-        <a class="btn btn-sm btn-default" style="float:right" 
+        <a class="btn btn-sm btn-default" style="float:right"
            href="{% url 'group:new' %}">Create</a>
       </div>
       {% endif %}
@@ -58,7 +58,7 @@ SOFTWARE.-->
         </script>
       </div>
     </div>
-    <a href="" class="btn btn-sm btn-default" data-toggle="modal" 
+    <a href="" class="btn btn-sm btn-default" data-toggle="modal"
        data-target="#searchGroupModal" style="float:left">Search group</a>
     <table id="allGroupTable" class="table table-hover">
       <thead>
@@ -121,9 +121,9 @@ SOFTWARE.-->
       </tbody>
     </table>
     <ul class="pager">
-      <li class="previous disabled"><a href="#" style="color:gray">← Previous</a>
+      <li><a href="#" style="color:gray">← Previous</a>
       </li>
-      <li class="next"><a href="#" style="color:black">Next →</a>
+      <li><a href="#" style="color:black">Next →</a>
       </li>
     </ul>
   </div>
@@ -136,7 +136,7 @@ SOFTWARE.-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="btn-default" class="close" data-dismiss="modal" aria-hidden="true">
-          &times; 
+          &times;
         </button>
         <h4 class="modal-title">Search</h4>
       </div>
