--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -23,6 +23,9 @@ SOFTWARE.
 -->
 {% extends 'index/base.html' %}
 {% load static %}
+{% block title_name %}
+<title>Notifications</title>
+{% endblock title_name %}
 {% block import_source %}
 <link rel="stylesheet" href={% static "./css/notification.css"%} media="screen">
 <script src={% static "./js/notification.js"%}></script>
