add pager comment

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -111,7 +111,8 @@ SOFTWARE.
     <!--Contest detail-->
     <div id="detail">
       <ul class="nav nav-tabs" role="tablist" id="contest_tab">
-        <li class="active" role="presentation"><a href="#overview" role="tab" data-toggle="tab">Overview</a>
+        <li class="active" role="presentation">
+          <a href="#overview" role="tab" data-toggle="tab">Overview</a>
         </li>
         <li class="dropdown" role="presentation">
           <a href="#problem" class="dropdown-toggle" data-toggle="dropdown">
