--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -120,6 +120,9 @@ SOFTWARE.
     {% if contests.has_previous %}
     <li><a href="?page={{ contests.previous_page_number }}">← Previous</a></li>
     {% endif %}
+    <span class="current">
+      Page {{ contests.number }} of {{ contests.paginator.num_pages }}.
+    </span>
     {% if contests.has_next %}
     <li><a href="?page={{ contests.next_page_number }}">Next →</a></li>
     {% endif %}
