--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -55,7 +55,7 @@ SOFTWARE.
           {% else %}
             <div class="progress">
               <div class="progress-bar progress-bar-success" style="width: {{p.pass_rate}}%;" 
-                data-toggle="tooltip" data-placement="top" title="{{p.pass_rate|floatformat:2}}">
+                data-toggle="tooltip" data-placement="top" title="{{p.pass_rate|floatformat:2}}%">
               </div>
               <div class="progress-bar progress-bar-danger" style="width: {{p.not_pass_rate}}%;" 
                 data-toggle="tooltip" data-placement="top" title="{{p.not_pass_rate|floatformat:2}}%">
