add status filter

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -142,8 +142,8 @@ SOFTWARE.
                  <span class="caret"></span>
                </a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href={% url "users:profile" user.username %}>Profile</a></li>
-                <li><a href={% url "status:status" user.username %}>Submissions</a></li>
+                <li><a href="{% url 'users:profile' user.username %}">Profile</a></li>
+                <li><a href="{% url 'status:status' %}?username={{ user }}">Submissions</a></li>
               </ul>
             </li>
             {% endif %}
