--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -102,7 +102,7 @@ SOFTWARE.
           {% if user|show_register_btn:contest %}
           <a data-toggle="modal" data-target="#register" 
            data-load-remote="{% url 'contest:register_page' contest.id %}"
-           data-remote-target="#registerContestContent">
+           data-remote-target="#registerContent">
             <button type="button" class="btn btn-success btn-xs"
              data-toggle="tooltip" data-placement="top" title="Register">
               <span class="glyphicon glyphicon-plus"></span>
@@ -137,7 +137,8 @@ SOFTWARE.
 <!-- register contest -->
 <div class="modal fade" id="register" tabindex="-1" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content" id="registerContestContent">
+    <div class="modal-content" id="registerContent">
+      <h3 style="text-align:center;">Loading...</h3>
     </div> <!-- /.modal-content -->
   </div> <!-- /.modal-dialog -->
 </div> <!-- /.modal -->
@@ -145,6 +146,7 @@ SOFTWARE.
 <div class="modal fade" id="contestInfo" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content" id="contestInfoContent">
+      <h3 style="text-align:center;">Loading...</h3>
     </div> <!-- /.modal-content -->
   </div> <!-- /.modal-dialog -->
 </div> <!-- /.modal -->
