provide json format

--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -36,7 +36,7 @@ SOFTWARE.
     </tr>
   </thead>
   <tbody>
-    {% for submission in submissions|submission_filter:user %}
+    {% for submission in submissions %}
       <tr
         {% if submission.list %}
           title="
