--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -50,8 +50,7 @@ SOFTWARE.
     {% if groups %}
     <tr>
       <td>
-        <a class="btn btn-success btn-lg btn-block" data-toggle="collapse" 
-         data-target="#group_select">a Group</a>
+        <a class="btn btn-success btn-lg btn-block" data-toggle="collapse" data-target="#group_select">a Group</a>
       </td>
     </tr>
     {% endif %}
@@ -66,6 +65,28 @@ SOFTWARE.
           <option value="{{ group.id }}">{{ group.gname }}</option>
           {% endfor %}
         </select>
+        <input class="btn btn-primary" type="submit" value="Confirm">
+      </form>
+    </div>
+  </div>
+  {% endif %} 
+  {% if user|has_auth:contest.id %}
+  <table width='100%'>
+    <tr class="separate-area"></tr>
+    <tr>
+      <td>
+        <a class="btn btn-success btn-lg btn-block" data-toggle="collapse" 
+        data-target="#public-user">Public User</a>
+      </td>
+    </tr>
+  </table>
+  <div class="collapse" id="public-user">
+    <div class="well">
+      <form class="form-inline" method="POST" action="{% url 'contest:register' contest.id %}">
+        {% csrf_token %}
+        <label>How many Public User?</label>
+        <br>
+        <input class="form-control" type="text" name="public_user" placeholder="0~{{ max_public_user }}">
         <input class="btn btn-primary" type="submit" value="Confirm">
       </form>
     </div>
