--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -132,7 +132,7 @@ SOFTWARE.
                  <span class="caret"></span>
                </a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'users:list' %}">User List</a></li>
+                <li><a href="#">User List</a></li>
                 <li><a href="#">User Rank</a></li>
               </ul>
             </li>
