finish problem list

--- a/problem/templates/problem/panel.html
+++ b/problem/templates/problem/panel.html
@@ -22,14 +22,25 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 {% extends 'problem/base.html' %}
+{% load static %}
+{% block title_name %}
+<title>Problem Panel</title>
+{% endblock title_name %}
+{% block import_source %}
+<link href="{% static 'problem/css/problemPanel.css' %}" rel="stylesheet">
+{% endblock import_source %}
 {% block body_block %}
-<div class="container" id="Body">
-  <h2>Problem Panel</h2>
+<div class="container" id="problemPanel">
+  <br>
+  <!--title-->
+  <div class="well">
+    <h2>Problem Panel</h2>
+  </div>
   <div>
     {% if can_add_problem %}
-    <button id="add_problem_btn" style='display:inline-block' class="btn btn-warning" href="{% url 'problem:new' %}"
-      data-toggle="tooltip" data-placement="top" title="add problem">+</button>
-    <div id="add_problem_form" style="display:inline-block;margin-left:10px">
+    <button id="add_problem_btn" class="btn btn-warning" href="{% url 'problem:new' %}"
+      data-toggle="tooltip" data-placement="top" title="add problem">Add problem</button>
+    <div id="add_problem_form">
       <form action="{% url 'problem:new' %}" method="POST" class="form-inline">
         {% csrf_token %}
         <div class="form-group">
@@ -41,7 +52,7 @@ SOFTWARE.
     </div>
     {% endif %}
   </div>
-  <div style='padding-top: 50px;'>
+  <div>
     <div>
       {% include 'problem/problem_list.html' with problem=all_problem %}
     </div>
@@ -54,5 +65,4 @@ $("#add_problem_btn").click(function (e) {
     $("#add_problem_form").show();
 });
 </script>
-
 {% endblock %}
