--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -21,7 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-<table class="table">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th style="width:20%">Problem ID</th>
@@ -54,10 +54,10 @@ SOFTWARE.
             No submission
           {% else %}
             <div class="progress">
-              <div class="progress-bar progress-bar-success" style="width: {{p.pass_rate}}%;" 
+              <div class="progress-bar progress-bar-success" style="width: {{p.pass_rate}}%;"
                 data-toggle="tooltip" data-placement="top" title="{{p.pass_rate|floatformat:2}}%">
               </div>
-              <div class="progress-bar progress-bar-danger" style="width: {{p.not_pass_rate}}%;" 
+              <div class="progress-bar progress-bar-danger" style="width: {{p.not_pass_rate}}%;"
                 data-toggle="tooltip" data-placement="top" title="{{p.not_pass_rate|floatformat:2}}%">
               </div>
             </div>
@@ -84,19 +84,16 @@ $(document).ready(function () {
   <span class="step-links">
     {% if problem.has_previous %}
       <li>
-        <a href="?page={{ problem.previous_page_number }}">← Previous</a>
+        <a href="?page={{ problem.previous_page_number }}"><span>&larr;</span> Previous</a>
       </li>
      {% endif %}
-
     <span class="current">
       Page {{ problem.number }} of {{ problem.paginator.num_pages }}.
     </span>
-
     {% if problem.has_next %}
       <li>
-        <a href="?page={{ problem.next_page_number }}">Next →</a>
+        <a href="?page={{ problem.next_page_number }}">Next <span>&rarr;</span></a>
       </li>
     {% endif %}
   </span>
 </ul>
-
