finish all list except group

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -34,7 +34,7 @@ SOFTWARE.
 {% endblock import_source %}
 {% load contest_extras %}
 {% block body_block %}
-<div class="container" id="contestArchive">
+<div class="container" id="list">
   <br>
   <!--title-->
   <div class="well">
