--- a/problem/templates/problem/panel.html
+++ b/problem/templates/problem/panel.html
@@ -30,7 +30,7 @@ SOFTWARE.
 <link href="{% static 'problem/css/problemPanel.css' %}" rel="stylesheet">
 {% endblock import_source %}
 {% block body_block %}
-<div class="container" id="problemPanel">
+<div class="container" id="list">
   <br>
   <!--title-->
   <div class="well">
