--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -33,7 +33,7 @@ SOFTWARE.
 {% endblock import_source %}
 {% block body_block %}
 
-<div class="container" id="statusBody">
+<div class="container" id="list">
   <br>
   <!--title-->
   <div class="well">
