--- a/users/templates/users/userList.html
+++ b/users/templates/users/userList.html
@@ -32,7 +32,7 @@ SOFTWARE.
 <link rel="stylesheet" href={% static "./css/userList.css"%} media="screen">
 {% endblock import_source %}
 {% block body_block %}
-  <div class="container" style="width: 75%;">
+  <div class="container" id="list">
     <br>
     <!--title-->
     <div class="well">
