--- a/index/templates/index/403.html
+++ b/index/templates/index/403.html
@@ -27,6 +27,7 @@ SOFTWARE.
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>403</title>
   <!-- bootstrap, bootwatch JS & CSS -->
   {% if user.is_authenticated %}
   <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
