--- a/users/templates/users/blockWrongTries.html
+++ b/users/templates/users/blockWrongTries.html
@@ -1,6 +1,8 @@
 {% extends "index/base.html" %}
 {% load static %}
-
+{% block title_name %}
+<title>Block Page</title>
+{% endblock title_name %}
 {% block body_block %}
   <div class="container"
        style="margin-top:50px;margin-bottom:50px;min-height:500px;">
