--- a/users/templates/users/confirm.html
+++ b/users/templates/users/confirm.html
@@ -24,7 +24,9 @@ SOFTWARE.
 {% extends "index/base.html" %}
 {% load static %}
 {% load profile_filters %}
-
+{% block title_name %}
+<title>Registration Completed</title>
+{% endblock title_name %}
 {% block body_block %}
   <div class="container"
        style="margin-top:50px;margin-bottom:50px;min-height:500px;">
