--- a/problem/templates/problem/detail.html
+++ b/problem/templates/problem/detail.html
@@ -21,7 +21,11 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-{% extends 'problem/base.html' %} {% block body_block %}
+{% extends 'problem/base.html' %}
+{% block title_name %}
+<title>Problem Detail</title>
+{% endblock title_name %}
+{% block body_block %}
 <div class="container" id="Body">
   {% include 'problem/problem.html' %}
 </div>
