--- a/status/templates/status/errorMessage.html
+++ b/status/templates/status/errorMessage.html
@@ -21,6 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+<title>Error</title>
 <div class="jumbotron" style="width:100%;margin:auto;">
   <h1>Error Message</h1>
   <pre style="margin:20px;">
