--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -25,7 +25,9 @@ SOFTWARE.
 {% load static %}
 {% load bootstrap %}
 {% load profile_filters %}
-
+{% block title_name %}
+<title>Profile</title>
+{% endblock title_name %}
 {% block body_block %}
 <br>
 <script src={% static "Chart.js/Chart.js" %}></script>
