--- a/problem/static/problem/css/problem.css
+++ b/problem/static/problem/css/problem.css
@@ -26,7 +26,6 @@ SOFTWARE.
   margin-bottom: 50px;
   min-height: 500px;
 }
-
 .pname_block {
   position: relative;
   min-height: 100px;
@@ -34,23 +33,26 @@ SOFTWARE.
   width: 100%;
   display: flex;
 }
-
 .pname {
-  word-wrap: break-word; 
+  word-wrap: break-word;
   word-break: normal;
 }
-
 .pname_block .left {
   padding-left: 10px;
   flex: 1;
 }
-
 .pname_block .right {
   padding: 10px;
 }
-
 .problem-option a {
   text-decoration: none;
   cursor: pointer;
 }
-
+#add_problem_form {
+  display: inline-block;
+  margin-left:10px;
+}
+#add_problem_btn {
+  display:inline-block;
+  margin-bottom: 20px;
+}
