--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -50,7 +50,8 @@ SOFTWARE.
     {% if groups %}
     <tr>
       <td>
-        <a class="btn btn-success btn-lg btn-block" data-toggle="collapse" data-target="#group_select">a Group</a>
+        <a class="btn btn-success btn-lg btn-block" data-toggle="collapse"
+           data-target="#group_select">a Group</a>
       </td>
     </tr>
     {% endif %}
@@ -86,7 +87,8 @@ SOFTWARE.
         {% csrf_token %}
         <label>How many Public User?</label>
         <br>
-        <input class="form-control" type="text" name="public_user" placeholder="0~{{ max_public_user }}">
+        <input class="form-control" type="text" name="public_user" 
+               placeholder="0~{{ max_public_user }}">
         <input class="btn btn-primary" type="submit" value="Confirm">
       </form>
     </div>
