--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -1,46 +1,26 @@
-{% extends "index/base.html" %} {% load staticfiles %} {% block title_name %}
+{% extends "index/base.html" %} 
+{% load staticfiles %}
+{% block title_name %}
+{% load bootstrap %}
 <title>{{ title }}</title>
 {% endblock title_name %} {% block import_source %}
-
 <script src="{% static 'multiselect/js/jquery.multi-select.js' %}" type="text/javascript"></script>
 <script src="{% static 'contest/js/editContest.js' %}" type="text/javascript"></script>
 <script src="{% static 'quicksearch/jquery.quicksearch.js' %}" type="text/javascript"></script>
 <script src="{% static 'contest/js/search.js' %}" type="text/javascript"></script>
 <link href="{% static 'contest/css/editContest.css'%}" rel="stylesheet" type="text/css">
-<link href="{% static 'multiselect/css/multi-select.css'%}" media="screen" rel="stylesheet" type="text/css">
-{% endblock import_source %}
-{% block body_block %}
+<link href="{% static 'multiselect/css/multi-select.css'%}" media="screen" rel="stylesheet" type="text/css"> 
+{{ form.media }}
+{% endblock import_source %} {% block body_block %}
 <div class="container" style="width:50%;">
-    <div class="well"><h2>{{ title }}</h2></div>
+  <div class="well">
+    <h2>{{ title }}</h2></div>
     <form action="." method="POST">
-        {% csrf_token %}
-        {% for field in form %}
-        {% if field.label_tag == form.is_homework.label_tag %}
-        <div class="fieldWrapper checkbox">
-            {{ field.errors }}
-             <label>
-                {{ field }}Is homework
-             </label>
-        </div>
-        {% elif field.label_tag == form.open_register.label_tag %}
-        <div class="fieldWrapper checkbox">
-            {{ field.errors }}
-             <label>
-                {{ field }}Open Register
-             </label>
-        </div>
-        {% elif field.label_tag == form.owner.label_tag %}
-        {{ field.as_hidden }}
-        {% else %}
-        <div class="fieldWrapper form-group">
-            {{ field.label_tag }}
-            {{ field.errors }}
-            {{ field }}
-        </div>
-        {% endif %}
-        {% endfor %}
-        <input class="btn btn-primary" type="submit" value="Submit">
+    {% csrf_token %}
+    {% for field in form %}
+      {{ field|bootstrap }}
+    {% endfor %}
+    <input class="btn btn-primary" type="submit" value="Submit">
     </form>
 </div>
-
 {% endblock body_block %}
